--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+*.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
@@ -151,3 +151,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+
+# my settings
+media/
+**/__pycache__
