--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,28 @@
+anyio==4.3.0
 asgiref==3.7.2
-Django==4.0
-django-cleanup==8.0.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+colorama==0.4.6
+Django==5.0.4
+django-cleanup==8.1.0
+exceptiongroup==1.2.0
+filelock==3.13.1
+fsspec==2024.2.0
+gradio_client==0.0.4
+h11==0.14.0
+httpcore==1.0.4
+httpx==0.27.0
+huggingface-hub==0.21.4
+idna==3.6
+packaging==24.0
 pillow==10.2.0
+python-dotenv==1.0.1
+PyYAML==6.0.1
+requests==2.31.0
+sniffio==1.3.1
 sqlparse==0.4.4
+tqdm==4.66.2
 typing_extensions==4.9.0
 tzdata==2023.4
+urllib3==2.2.1
+websockets==11.0.3
